@@ -387,6 +387,10 @@ ENERGY_SAVING_INTERNAL="no"
 #ENERGY_SAVING_NODE_MANAGER_SLEEP_CMD="/etc/oar/shut_down_nodes.sh"
 
 # Timeout to consider a node broken (suspected) if it has not woken up
+# The value can be an integer of seconds or a set of pairs.
+# For example, "1:500 11:1000 21:2000" will produce a timeout of 500
+# seconds if 1 to 10 nodes have to wakeup, 1000 seconds if 11 t 20 nodes
+# have to wake up and 2000 seconds otherwise.
 #ENERGY_SAVING_NODE_MANAGER_WAKEUP_TIMEOUT="900"
 
 # You can set up a number of nodes that must always be on. You can use the 
